--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "http://modular-material-admin-react.modularcode.io",
   "dependencies": {
-    "@material-ui/core": "4.9.11",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "4.9.1",
     "@rehooks/component-size": "^1.0.3",
     "@types/lodash": "^4.14.149",
