--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "homepage": "http://modular-material-admin-react.modularcode.io",
   "dependencies": {
+    "@grapecity/wijmo.react.all": "5.20203.748",
+    "@grapecity/wijmo.styles": "5.20203.748",
     "@material-ui/core": "4.9.11",
     "@material-ui/icons": "4.9.1",
     "@rehooks/component-size": "^1.0.3",
@@ -39,7 +41,8 @@
     "storybook-chromatic": "^3.4.1",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.7.4",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "bootstrap": "3.3.7"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^5.3.0-rc.4",
@@ -58,7 +61,9 @@
     "gh-pages": "^2.2.0",
     "prettier": "1.18.2",
     "react-docgen-typescript-loader": "^3.6.0",
-    "ts-loader": "^6.2.1"
+    "ts-loader": "^6.2.1",
+    "@grapecity/wijmo.react.all": "5.20203.748",
+    "@grapecity/wijmo.styles": "5.20203.748"
   },
   "eslintConfig": {
     "extends": "react-app"
